[package]
name = "mrh"
version = "0.10.15"
description = "Crawls filesystem and displays pending status of each git repo found"
repository = "https://github.com/tshepang/mrh"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["git"]
authors = ["Tshepang Lekhonkhobe <tshepang@gmail.com>"]
edition = "2018"
rust-version = "1.56.1"

[features]
yaml = ["serde_yaml", "serde"]
json = ["serde_json", "serde"]

[dependencies]
ansi_term = "0.12"
dirs-next = "2"
git2 = "0.14"
indexmap = "1"
walkdir = "2"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.serde_yaml]
version = "0.8"
optional = true
