[package]
name = "mrh"
version = "0.10.15"
description = "Crawls filesystem and displays pending status of each git repo found"
repository = "https://github.com/tshepang/mrh"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["git"]
authors = ["Tshepang Mbambo <tshepang@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

[features]
json = ["serde_json", "serde"]

[dependencies]
ansi_term = "0.12"
anyhow = "1"
dirs-next = "2"
git2 = "0.14"
indexmap = "1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.ignore]
version = "0.4"
default-features = false

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true
