[package]
name = "mrh"
version = "0.11.1"
description = "Crawls filesystem and displays pending status of each git repo found"
repository = "https://github.com/tshepang/mrh"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["git"]
authors = ["Tshepang Mbambo <tshepang@gmail.com>"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "mrh"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:ansi_term", "dep:anyhow", "json"]
json = ["dep:serde_json", "dep:serde"]

[dependencies]
dirs-next = "2"
git2 = "0.15"
indexmap = "1"

[dependencies.ansi_term]
version = "0.12"
optional = true

[dependencies.anyhow]
version = "1"
optional = true

[dependencies.clap]
version = "4"
optional = true
features = ["derive"]

[dependencies.ignore]
version = "0.4"
default-features = false

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true
